// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer: range with min & max & step by variables 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
                  data-amis-name="range"
                  data-role="form-item"
                >
                  <label
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          滑块
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__RangeControl __AMIS_COMPONENT_CLASS_PREFIX__InputRange __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
                  >
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-wrap"
                    >
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-track __AMIS_COMPONENT_CLASS_PREFIX__InputRange-track--background"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-track-active"
                          style="width: 10%; left: 0%;"
                        />
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-handle"
                          style="left: 10%; z-index: 1;"
                        >
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-handle-icon"
                          >
                            <icon-mock
                              class="icon icon-slider-handle"
                              icon="slider-handle"
                            />
                          </div>
                          <div
                            class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-label pos-top"
                          >
                            <span>
                              12
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-input"
                    >
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Number __AMIS_COMPONENT_CLASS_PREFIX__Number--borderFull"
                      >
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-wrap"
                        >
                          <span
                            aria-disabled="false"
                            aria-label="Increase Value"
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up"
                            role="button"
                            unselectable="on"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up-inner"
                              unselectable="on"
                            />
                          </span>
                          <span
                            aria-disabled="false"
                            aria-label="Decrease Value"
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down"
                            role="button"
                            unselectable="on"
                          >
                            <span
                              class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down-inner"
                              unselectable="on"
                            />
                          </span>
                        </div>
                        <div
                          class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input-wrap"
                        >
                          <input
                            aria-valuemax="66"
                            aria-valuemin="6"
                            aria-valuenow="12"
                            autocomplete="off"
                            class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input"
                            role="spinbutton"
                            step="2"
                            value="12"
                          />
                        </div>
                      </div>
                    </div>
                    <a
                      class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-clear is-active"
                    >
                      <icon-mock
                        class="icon icon-close"
                        icon="close"
                      />
                    </a>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:range with marks 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="range"
          data-role="form-item"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__RangeControl __AMIS_COMPONENT_CLASS_PREFIX__InputRange __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-wrap"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-track __AMIS_COMPONENT_CLASS_PREFIX__InputRange-track--background"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-track-active"
                  style="width: 0%; left: 0%;"
                />
                <div>
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-track-dot"
                    style="left: 20%;"
                  />
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-track-dot"
                    style="left: 40%;"
                  />
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-track-dot"
                    style="left: 60%;"
                  />
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-track-dot"
                    style="left: 80%;"
                  />
                </div>
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-handle"
                  style="left: 0%; z-index: 1;"
                >
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-handle-icon"
                  >
                    <icon-mock
                      class="icon icon-slider-handle"
                      icon="slider-handle"
                    />
                  </div>
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-label pos-top"
                  >
                    <span>
                      0
                    </span>
                  </div>
                </div>
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-marks"
                >
                  <div
                    style="left: 0%; width: 10%;"
                  >
                    <span>
                      0
                    </span>
                  </div>
                  <div
                    style="left: 20%; width: 10%;"
                  >
                    <span>
                      20Mbps
                    </span>
                  </div>
                  <div
                    style="left: 40%; width: 10%;"
                  >
                    <span>
                      40Mbps
                    </span>
                  </div>
                  <div
                    style="left: 60%; width: 10%;"
                  >
                    <span>
                      60Mbps
                    </span>
                  </div>
                  <div
                    style="left: 80%; width: 10%;"
                  >
                    <span>
                      80Mbps
                    </span>
                  </div>
                  <div
                    style="left: 100%; width: 10%;"
                  >
                    <span>
                      100
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:range with min & max & step & joinValues 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="range"
          data-role="form-item"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__RangeControl __AMIS_COMPONENT_CLASS_PREFIX__InputRange __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-input"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Number __AMIS_COMPONENT_CLASS_PREFIX__Number--borderFull"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-wrap"
                >
                  <span
                    aria-disabled="false"
                    aria-label="Increase Value"
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up-inner"
                      unselectable="on"
                    />
                  </span>
                  <span
                    aria-disabled="false"
                    aria-label="Decrease Value"
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down-inner"
                      unselectable="on"
                    />
                  </span>
                </div>
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input-wrap"
                >
                  <input
                    aria-valuemax="1"
                    aria-valuemin="0"
                    aria-valuenow="0.2"
                    autocomplete="off"
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input"
                    role="spinbutton"
                    step="0.1"
                    value="0.2"
                  />
                </div>
              </div>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-wrap"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-track __AMIS_COMPONENT_CLASS_PREFIX__InputRange-track--background"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-track-active"
                  style="width: 60%; left: 20%;"
                />
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-handle"
                  style="left: 20%; z-index: 1;"
                >
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-handle-icon"
                  >
                    <icon-mock
                      class="icon icon-slider-handle"
                      icon="slider-handle"
                    />
                  </div>
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-label pos-top"
                  >
                    <span>
                      0.2
                    </span>
                  </div>
                </div>
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-handle"
                  style="left: 80%; z-index: 1;"
                >
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-handle-icon"
                  >
                    <icon-mock
                      class="icon icon-slider-handle"
                      icon="slider-handle"
                    />
                  </div>
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-label pos-top"
                  >
                    <span>
                      0.8
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-input"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Number __AMIS_COMPONENT_CLASS_PREFIX__Number--borderFull"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-wrap"
                >
                  <span
                    aria-disabled="false"
                    aria-label="Increase Value"
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up-inner"
                      unselectable="on"
                    />
                  </span>
                  <span
                    aria-disabled="false"
                    aria-label="Decrease Value"
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down-inner"
                      unselectable="on"
                    />
                  </span>
                </div>
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input-wrap"
                >
                  <input
                    aria-valuemax="1"
                    aria-valuemin="0"
                    aria-valuenow="0.8"
                    autocomplete="off"
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input"
                    role="spinbutton"
                    step="0.1"
                    value="0.8"
                  />
                </div>
              </div>
            </div>
            <a
              class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-clear"
            >
              <icon-mock
                class="icon icon-close"
                icon="close"
              />
            </a>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:range with multiple & clearable & delimiter 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="range"
          data-role="form-item"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__RangeControl __AMIS_COMPONENT_CLASS_PREFIX__InputRange __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-input"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Number __AMIS_COMPONENT_CLASS_PREFIX__Number--borderFull"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-wrap"
                >
                  <span
                    aria-disabled="false"
                    aria-label="Increase Value"
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up-inner"
                      unselectable="on"
                    />
                  </span>
                  <span
                    aria-disabled="false"
                    aria-label="Decrease Value"
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down-inner"
                      unselectable="on"
                    />
                  </span>
                </div>
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input-wrap"
                >
                  <input
                    aria-valuemax="100"
                    aria-valuemin="0"
                    aria-valuenow="7"
                    autocomplete="off"
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input"
                    role="spinbutton"
                    step="1"
                    value="7"
                  />
                </div>
              </div>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-wrap"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-track __AMIS_COMPONENT_CLASS_PREFIX__InputRange-track--background"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-track-active"
                  style="width: 6%; left: 7%;"
                />
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-handle"
                  style="left: 7%; z-index: 1;"
                >
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-handle-icon"
                  >
                    <icon-mock
                      class="icon icon-slider-handle"
                      icon="slider-handle"
                    />
                  </div>
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-label pos-top"
                  >
                    <span>
                      7
                    </span>
                  </div>
                </div>
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-handle"
                  style="left: 13%; z-index: 1;"
                >
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-handle-icon"
                  >
                    <icon-mock
                      class="icon icon-slider-handle"
                      icon="slider-handle"
                    />
                  </div>
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-label pos-top"
                  >
                    <span>
                      13
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-input"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Number __AMIS_COMPONENT_CLASS_PREFIX__Number--borderFull"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-wrap"
                >
                  <span
                    aria-disabled="false"
                    aria-label="Increase Value"
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up-inner"
                      unselectable="on"
                    />
                  </span>
                  <span
                    aria-disabled="false"
                    aria-label="Decrease Value"
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down-inner"
                      unselectable="on"
                    />
                  </span>
                </div>
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input-wrap"
                >
                  <input
                    aria-valuemax="100"
                    aria-valuemin="0"
                    aria-valuenow="13"
                    autocomplete="off"
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input"
                    role="spinbutton"
                    step="1"
                    value="13"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="range"
          data-role="form-item"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-static"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control"
            >
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
              >
                7--13
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:range with showInput & showInputUnit 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="range"
          data-role="form-item"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__RangeControl __AMIS_COMPONENT_CLASS_PREFIX__InputRange __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-wrap"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-track __AMIS_COMPONENT_CLASS_PREFIX__InputRange-track--background"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-track-active"
                  style="width: 7%; left: 0%;"
                />
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-handle"
                  style="left: 7%; z-index: 1;"
                >
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-handle-icon"
                  >
                    <icon-mock
                      class="icon icon-slider-handle"
                      icon="slider-handle"
                    />
                  </div>
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-label pos-top"
                  >
                    <span>
                      7个
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-input __AMIS_COMPONENT_CLASS_PREFIX__InputRange-input-with-unit"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Number __AMIS_COMPONENT_CLASS_PREFIX__Number--borderFull"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-wrap"
                >
                  <span
                    aria-disabled="false"
                    aria-label="Increase Value"
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up-inner"
                      unselectable="on"
                    />
                  </span>
                  <span
                    aria-disabled="false"
                    aria-label="Decrease Value"
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down-inner"
                      unselectable="on"
                    />
                  </span>
                </div>
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input-wrap"
                >
                  <input
                    aria-valuemax="100"
                    aria-valuemin="0"
                    aria-valuenow="7"
                    autocomplete="off"
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input"
                    role="spinbutton"
                    step="1"
                    value="7"
                  />
                </div>
              </div>
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-unit __AMIS_COMPONENT_CLASS_PREFIX__Select"
              >
                个
              </div>
            </div>
            <a
              class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-clear is-active"
            >
              <icon-mock
                class="icon icon-close"
                icon="close"
              />
            </a>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:range with showSteps 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="range"
          data-role="form-item"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__RangeControl __AMIS_COMPONENT_CLASS_PREFIX__InputRange __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-wrap"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-track __AMIS_COMPONENT_CLASS_PREFIX__InputRange-track--background"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-track-active"
                  style="width: 0%; left: 0%;"
                />
                <div>
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-track-dot"
                    style="left: 10%;"
                  />
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-track-dot"
                    style="left: 20%;"
                  />
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-track-dot"
                    style="left: 30%;"
                  />
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-track-dot"
                    style="left: 40%;"
                  />
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-track-dot"
                    style="left: 50%;"
                  />
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-track-dot"
                    style="left: 60%;"
                  />
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-track-dot"
                    style="left: 70%;"
                  />
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-track-dot"
                    style="left: 80%;"
                  />
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-track-dot"
                    style="left: 90%;"
                  />
                </div>
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-handle"
                  style="left: 0%; z-index: 1;"
                >
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-handle-icon"
                  >
                    <icon-mock
                      class="icon icon-slider-handle"
                      icon="slider-handle"
                    />
                  </div>
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-label pos-top"
                  >
                    <span>
                      0
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-input"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Number __AMIS_COMPONENT_CLASS_PREFIX__Number--borderFull"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-wrap"
                >
                  <span
                    aria-disabled="false"
                    aria-label="Increase Value"
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-up-inner"
                      unselectable="on"
                    />
                  </span>
                  <span
                    aria-disabled="true"
                    aria-label="Decrease Value"
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down __AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down-disabled"
                    role="button"
                    unselectable="on"
                  >
                    <span
                      class="__AMIS_COMPONENT_CLASS_PREFIX__Number-handler-down-inner"
                      unselectable="on"
                    />
                  </span>
                </div>
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input-wrap"
                >
                  <input
                    aria-valuemax="10"
                    aria-valuemin="0"
                    aria-valuenow="0"
                    autocomplete="off"
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Number-input"
                    role="spinbutton"
                    step="1"
                    value="0"
                  />
                </div>
              </div>
            </div>
            <a
              class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-clear"
            >
              <icon-mock
                class="icon icon-close"
                icon="close"
              />
            </a>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:range with tooltipVisible & tooltipPlacement 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="range"
          data-role="form-item"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__RangeControl __AMIS_COMPONENT_CLASS_PREFIX__InputRange __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-wrap"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-track __AMIS_COMPONENT_CLASS_PREFIX__InputRange-track--background"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-track-active"
                  style="width: 41%; left: 0%;"
                />
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-handle"
                  style="left: 41%; z-index: 1;"
                >
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-handle-icon"
                  >
                    <icon-mock
                      class="icon icon-slider-handle"
                      icon="slider-handle"
                    />
                  </div>
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__InputRange-label pos-right __AMIS_COMPONENT_CLASS_PREFIX__InputRange-label-visible"
                  >
                    <span>
                      41
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
